# subconverter

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README-cn.md  README-docker.md  README.md  compare_nodes.py  start_local_server.ps1
.github/workflows/: Delete_workflow.yml  build.yml  delete.yml  docker.yml  sub-web.yml  submodule.yml
base/: pref.example.toml
base/base/: all-base.tpl  clash_provider_test.yml  singbox.json
base/config/: AIO-NoReject.toml  AIO.toml  AllSub-AdBlock.toml  AllSub-NoReject.toml  CordCloud-NoReject.toml  CordCloud.toml  MultiSub-AdBlock.toml  MultiSub-NoReject.toml
base/snippets/: emoji.toml  emoji.txt  groups.toml  rename_node.toml  rulesets.toml
base/sub-web/: index.html  manifest.json  manifest.webmanifest  service-worker.js  service-worker.js.map  sw.js  workbox-34233452.js.map  workbox-473c83d1.js
base/sub-web/assets/: @element-plus-icons-Cxz9tSco.js  axios-CiY5pIQp.js  element-plus-AzamkEXN.js  index-Bc7nbcnt.js  index-BqyPuibz.js  index-CQvYnavv.css  index-DIaBumWk.css  index-DX5L0jEj.css  index-DlXADNyE.css  index-JCvUfnl9.js  index-UOK_ktSL.js  rolldown-runtime-DLHw7_DS.js  vue-BZx6WYVW.js  vue-C199xcBA.js  vue-CArbwscF.js  workbox-window.prod.es5-DDQnXlxq.js
base/sub-web/css/: 213.ceba5b14.css  238.d2e44ca8.css  289.2b84fe5e.css  431.328fb9ab.css  636.bafd11c8.css  811.6b13deea.css  866.7be22e6c.css  925.fb1bd16e.css  app.29c59481.css  app.2f1ddd58.css  app.4dcd730e.css  app.bb7073fb.css  app.c6a574cc.css  app.d04bb92b.css  app.e19c4c5b.css  chunk-vendors.8619ffd9.css
base/sub-web/js/: 213.095570d3.js  213.b992506c.js  213.c42afba5.js  213.da3e226a.js  238.17fa8330.js  289.50f5a19b.js  303.c957c554.js  319.1218c568.js  319.1218c568.js.map  338.a1f8a611.js  340.ef76807b.js  389.3acf52f4.js  394.dcac3098.js  394.dcac3098.js.map  431.3b96a1af.js  498-legacy.997aa359.js  498-legacy.997aa359.js.map  552-legacy.728ffff8.js  552-legacy.728ffff8.js.map  629.fd31d0ca.js  636.b86ce419.js  673.16126493.js  811.f51335fb.js  827-legacy.47ca2a07.js  827-legacy.47ca2a07.js.map  866.76879db7.js  925.c7528d75.js  930.126c9457.js  930.6b628a2a.js  930.c0ce98f2.js  930.f0b8ae93.js  985.c891297e.js  985.c891297e.js.map  app-legacy.0193442b.js  app-legacy.0193442b.js.map  app-legacy.9f38f03d.js  app-legacy.9f38f03d.js.map  app-legacy.b8ca7ae1.js  app-legacy.b8ca7ae1.js.map  app.0a6af797.js  (+86 more)
include/: quickjspp.hpp
scripts/: Dockerfile  build.alpine.release.sh  build.macos.release.sh  build.windows.release.sh  merge_manifest.py  rules_config.conf  update_rules.py
src/: main.cpp
src/config/: binding.h  proxygroup.h  ruleset.h
src/generator/config/: nodemanip.cpp  ruleconvert.cpp  subexport.cpp  subexport.h
src/generator/template/: templates.cpp
src/handler/: interfaces.cpp  settings.cpp  settings.h  webget.cpp
src/parser/: subparser.cpp  subparser.h
src/parser/config/: proxy.h
src/script/: script_quickjs.cpp  script_quickjs.h
src/server/: webserver_httplib.cpp
src/utils/: logger.cpp  map_extra.h  rapidjson_extra.h  string.cpp  string.h
